--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@
               <p>Example</p>
               <span>____</span>
             </div>
-          </li>
+          </li> 
           <li class="synonym">
             <div class="details">
               <p>Synonyms</p>
               <div class="list"></div>
+              <span>___</span>
             </div>
           </li>
         </div>
